--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,3 +1,43 @@
+
+		/*************************************************
+		**  FEUILLE DE STYLE PAR DEFAUT DE LISTMANAGER  **
+		*************************************************/
+
+
+#liste-parent > div {
+	display: flex;
+}
+
+#liste-parent > div > * {
+	float: left;
+}
+
+#boutons-options {
+	margin-top: 60px;
+}
+
+#boutons-options > a, #boutons-options input[type="submit"] {
+  display: block;
+  text-decoration: none;
+  width: 40px;
+  height: 40px;
+  margin: 10px 20px;
+  padding: 5px;
+  color: black;
+  line-height: 40px;
+  border: 1px solid black;
+  background-color: #fff;
+  box-sizing: content-box;
+  cursor: pointer;
+}
+
+#boutons-options > a > img {
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+} 
+
+
 table {
 	border-collapse: collapse;
 	text-align: center;
@@ -8,14 +48,21 @@ tr {
 }
 
 tr:not(:first-child):hover {
-	background-color: #ccc;
+	background-color: #ddd;
 }
 
 th {
 	text-decoration: none;
+	padding: 5px 3px;
 }
 
-th > a.titre-colonnes {
+tr.tabSelect input {
+	border-radius: 0;
+	border: 1px solid #999;
+	padding: 3px;
+}
+
+th > a.titre-colonne {
 	color: black;
 }
 
@@ -34,17 +81,39 @@ td {
 }
 
 .gris {
-	background-color: grey;
+	background-color: #888;
+}
+
+.gris-clair {
+	background-color: #ccc;
 }
 
 .orange {
 	background-color: orange;
 }
 
-#pagination td {
-	border: none;
-	padding: 5px;
+#pagination {
+	margin: 10px auto;
 }
+
+#pagination td:hover {
+	background-color: #eee;
+}
+
 #pagination tr:hover {
 	background-color: white;
+}
+
+#pagination td {
+	border: none;
+	padding: 0 10px;
+	font-size: 22px;
+}
+
+#pagination td {
+	color: red;
+}
+
+#pagination td > a {
+	color: black;
 }
