--- a/src/css/base.css
+++ b/src/css/base.css
@@ -37,13 +37,15 @@
 	-webkit-user-select: none;
 } 
 
-
 table {
 	border-collapse: collapse;
 	text-align: center;
 }
-
 table.liste {
+	border-bottom: 3px solid #888;
+}
+
+table.fix-margin {
 	margin-bottom: 40px;
 }
 
@@ -51,10 +53,16 @@ table.liste {
 	background-color: white;
 }
 
-.ligne-titres.fixed {
+.fixed {
 	position: fixed;
+}
+.ligne-titres.fixed {
 	top: 0;
 	box-shadow: 0 2px 5px .222;
+}
+.boutons-options.fixed {
+	top: 0;
+	margin-top: 0;
 }
 
 tr:not(:first-child):hover {
@@ -63,7 +71,7 @@ tr:not(:first-child):hover {
 
 th, .tabSelect td {
 	padding: 10px 5px;
-	border-bottom: 3px solid #999;
+	border-bottom: 3px solid #888;
 }
 
 .fixed th {
@@ -81,7 +89,7 @@ th > a {
 
 tr.tabSelect input {
 	border-radius: 0;
-	border: 1px solid #999;
+	border: 1px solid #888;
 	padding: 3px;
 }
 
