--- a/src/css/base.css
+++ b/src/css/base.css
@@ -71,6 +71,8 @@ tr:not(:first-child):hover {
 
 th, .tabSelect td {
 	padding: 10px 5px;
+}
+th {
 	border-bottom: 3px solid #888;
 }
 
@@ -86,11 +88,14 @@ th > a {
 	font-bold: bold;
 }
 
-
 tr.tabSelect input {
 	border-radius: 0;
 	border: 1px solid #888;
 	padding: 3px;
+}
+
+tr.tabSelect {
+	border-bottom: 3px solid #888;
 }
 
 th > a.titre-colonne {
@@ -107,7 +112,7 @@ th > a.masque:visited {
 }
 
 td {
-	border: 1px solid white;
+	border: 2px solid white;
 	padding: 5px;
 }
 
