suppression font google

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -4,7 +4,7 @@
 		*************************************************/
 
 .liste-parent {
-	font-family: 'Amiko';
+	font-family: Verdana,Arial, Helvetica, sans-serif;
 }
 
 .liste-parent > div {
